--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "@types/node": "^22.18.13",
     "@types/react": "^19.2.2",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.34.1",
-    "@typescript-eslint/parser": "8.34.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.39.0",
     "eslint-config-next": "^16.0.0",
     "eslint-config-prettier": "9.1.0",
