--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "next-app-template",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
