--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fflate": "^0.8.2",
+    "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "intl-messageformat": "10.7.16",
@@ -79,7 +80,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
