feat: ajouter les dépendances @react-email/components et @react-email/render

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@heroui/user": "2.2.22",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.28",
+    "@react-email/components": "^1.0.3",
+    "@react-email/render": "^2.0.1",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
     "@supabase/supabase-js": "^2.78.0",
